Add UmuT5513 card info

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Umut Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Umut</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/UmuT5513" target="_blank">UmuT5513</a>
+          </p>
+          <p class="about">Hi! Loves search somethings and produce knowledges from them which are "raw" data. The God says READ and I'm doing it.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://realpython.com/" target="_blank" title="First Resource">Real Python</a>
+              </li>
+              <li>
+                <a href="https://notebooklm.google.com/" target="_blank" title="Second Resource">NotebookLM</a>
+              </li>
+              <li>
+                <a href="https://www.datacamp.com/" target="_blank" title="Third resource">DataCamp</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Umut Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
