--- a/index.html
+++ b/index.html
@@ -115,6 +115,35 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Lev card START ________  -->
+        <div class="card">
+          <p class="name">Lev Medvedev</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/Lev_Medvedev_" target="_blank">My Twitter</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Bullettime23" target="_blank">My GitHub</a>
+          </p>
+          <p class="about">Hi! I'm a professional frontend developer. I have worked for companies for 5 years, and recently decided to
+          explore GitHub for open source projects to contribute to, so I typed "contribute" in the search field, and this is the first
+          project I got!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://css-awards.com/" target="_blank" title="Inspiring web design collection">CSS Awards</a>
+              </li>
+              <li>
+                <a href="https://www.codingame.com/start/" target="_blank" title="Play and learn programming">CodinGame</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=xAcTmDO6NTI&list=PLUl4u3cNGP62A-ynp6v6-LGBCzeH3VAQB" target="_blank" title="Free MIT cource">MIT OpenCourseWare</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Lev card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
