--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+====Please Insert Card Here===
+    <!-- ________ Alice's Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Alice</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/aliceewarrenn" target="_blank">aliceewarrenn</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/alicewarren23" target="_blank">alicewarren23</a>
+          </p>
+          <p class="about">Hello Everyone! My name is Alice and I'm currently studying Mathematics and very excited to begin my GitHub journey.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://leetcode.com" target="_blank" title="First Resource">LeetsCode</a>
+              </li>
+              <li>
+                <a href="https://www.kaggle.com" target="_blank" title="Second Resource">Kaggle</a>
+              </li>
+              <li>
+                <a href="https://www.pluralsight.com" target="_blank" title="Third resource">PluralSight</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Alice's Contributor card END ________  -->
+        
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
