fixed the linkedin and github profiles hyperlinks

--- a/index.html
+++ b/index.html
@@ -118,13 +118,14 @@
         <!-- ________ luisyamagata card START ________  -->
 
         <!-- ________ *TEMPLATE: MAKE A COPY* luis card START ________  -->
+         
         <div class="card">
           <p class="name">Luis Yamagata</p>
           <p class="contact">
             <i class="fab fa-linkedin"></i>
-            <a href="https://www.twitter.com/luispombo_" target="_blank">Luis Yamagata</a>
+            <a href="https://www.linkedin.com/in/luis-yamagata-381a994b/" target="_blank">Luis Yamagata</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.https://github.com/luisyamagata" target="_blank">luisyamagata</a>
+            <a href="https://github.com/luisyamagata" target="_blank">luisyamagata</a>
           </p>
           <p class="about">Oi, sou o Luis. Estudante de Análise e Desenvolvimento de Sistemas. Aprendendo HTML, CSS, Javascript e Python atualmente.</p>
           <div class="resources">
