Add my card information.

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Joao Gabriel</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/JooGabr86495532" target="_blank">@JooGabr86495532</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/GabrirelBRAA" target="_blank">GabrirelBRAA</a>
+          </p>
+          <p class="about">Just a programmer learning how to code</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://news.ycombinator.com" target="_blank" title="First Resource">Hacker News</a>
+              </li>
+              <li>
+                <a href="https://teachyourselfcs.com" target="_blank" title="Second Resource">teachyourselfcs</a>
+              </li>
+              <li>
+                <a href="https://www.anthropic.com/engineering/building-effective-agents" target="_blank" title="Third resource">How to Build Effect AI agents (by anthropic)</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
