--- a/index.html
+++ b/index.html
@@ -3154,6 +3154,41 @@
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
 
+        <!-- ________ YiLei card START ________  -->
+        <div class="card">
+          <p class="name">OneYiLei</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/OneYiLei" target="_blank">@OneYiLei</a>
+          </p>
+          <p class="about">Hi!, I'm a front-end developer。I like programming! Wish you happiness! 😊</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://codepen.io/" target="_blank" title="codepen">
+                  Codepen
+                </a>
+              </li>
+              <li>
+                <a
+                        href="https://ditto-cp.sourceforge.io/"
+                        target="_blank"
+                        title="Free ditto"
+                >
+                  Ditto
+                </a>
+              </li>
+              <li>
+                <a href="https://www.snipaste.com/" target="_blank" title="snipaste">
+                  Snipaste
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ YiLei card END ________  -->
+
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
