--- a/index.html
+++ b/index.html
@@ -115,6 +115,35 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        
+        
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Theto</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Khiloe" target="_blank">Khiloe</a>
+          </p>
+          <p class="about">Hi 😁 I'm Theto I'm currently a self taught programmer working my way to becoming a full stack developer, I like video games and Anime</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://roadmap.sh/" target="_blank" title="Roadmap">Roadmap</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="W3 Schools">W3 Schools</a>
+              </li>
+              <li>
+                <a href="https://www.codecademy.com/" target="_blank" title="Codecademy">Codecademy</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
@@ -150,6 +179,8 @@
           </div>
         </div>
         <!-- ________ unimaria card END ________  -->
+
+
 
         <!-- ________ Advait Desai Card START ________  -->
         <div class="card">
