--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
 
         
         
-        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <!-- ________ Theto Contributor card START ________  -->
         <div class="card">
           <p class="name">Theto</p>
           <p class="contact">
-            <i class="fab fa-x-twitter"></i>
-            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <i class="fab fa-instagram"></i>
+            <a href="https://www.instagram.com/t_icarusfalls/" target="_blank">t_icarusfalls</a>
             <i class="fab fa-github"></i>
             <a href="https://github.com/Khiloe" target="_blank">Khiloe</a>
           </p>
@@ -142,7 +142,7 @@
             </ul>
           </div>
         </div>
-        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        <!-- ________ Theto Contributor card END _________  -->
 
         <!-- ________ unimaria card START ________  -->
         <div class="card">
