--- a/index.html
+++ b/index.html
@@ -115,6 +115,36 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ adriihdezz card START ________  -->
+        <div class="card">
+          <p class="name">Adrian</p>
+          <p class="contact">
+            <i class="fa-brands fa-itch-io"></i>
+            <a href="https://vakiis.itch.io/" target="_blank">Vakiis</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/adriihdezz" target="_blank">adriihdezz</a>
+          </p>
+          <p class="about">
+            Hi there! I'm Adrian, a CS student that is starting his Full-Stack joruney while trying to learn some collaborative development.
+            I'm eager to keep learning, building, and solving problems through code! 😄
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="w3 schools">W3 Schools</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@coding2go" target="_blank" title="Coding2Go">Interesting Channel for styling</a>
+              </li>
+              <li>
+                <a href="https://cssgradient.io/" target="_blank" title="CSSGradient">Useful tool for creating gradients</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ adriihdezz card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
