Adds Hussaini Said profile card
Expands the contributor gallery with a new profile featuring social links and a three-item resources list, aligning with existing card structure to improve visibility.

--- a/index.html
+++ b/index.html
@@ -150,7 +150,35 @@
           </div>
         </div>
         <!-- ________ unimaria card END ________  -->
+         <!-- Hussaini Said Card START ________  -->
 
+        <div class="card">
+          <p class="name">Hussaini Said</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/hussainiAdam" target="_blank">hussainiAdam</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.twitter.com/hussainiAdam" target="_blank">hussiniAdam</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/hooseinsaid" target="_blank">hooseinsaid</a>
+          </p>
+          <p class="about"></p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Hussaini Said Card END ________  -->
         <!-- ________ Advait Desai Card START ________  -->
         <div class="card">
           <p class="name">Advait Desai</p>
