added my resources

--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+                <a href="#" target="_blank" title="First Resource">GeeksforGeeks 1</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+                <a href="#" target="_blank" title="Second Resource">GeeksforGeeks 2</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+                <a href="#" target="_blank" title="Third resource">GeeksforGeeks 3</a>
               </li>
             </ul>
           </div>
