--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ weilinux Contributor card START ________  -->
+        <div class="card">
+          <p class="name">weilinux</p>
+          <p class="contact">
+            <i class="fa-brands fa-google"></i>
+            <a href="https://www.google.com" target="_blank">dont use twitter lol</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/weilinux" target="_blank">weilinux</a>
+          </p>
+          <p class="about">Hello, I am an SRE/Devops engineer, mainly use go and rust.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.yuque.com/" target="_blank" title="Yuque-best notes about IT">Yuque</a>
+              </li>
+              <li>
+                <a href="https://www.github.com/" target="_blank" title="Best Open sources community">Github</a>
+              </li>
+              <li>
+                <a href="https://www.udemy.com/" target="_blank" title="Udemy Courses">Udemy (Online Courses)</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ weilinux Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
