--- a/index.html
+++ b/index.html
@@ -115,6 +115,41 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ card START ________  -->
+        <div class="card">
+          <p class="name">Dhrubo Roy</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="#" target="_blank">ItSeemsUseless</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/DhruboRoyPartho" target="_blank">DhruboRoyPartho</a>
+          </p>
+          <p class="about">
+            Hi! I am Dhrubo. I am doing this for first experience to contribution. I have not much idea for contribution.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.udemy.com/" target="_blank" title="Udemy - has the best courses">Udemy</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="W3 Schools">W3 Schools</a>
+              </li>
+              <li>
+                <a
+                  href="https://www.youtube.com"
+                  target="_blank"
+                  title="Youtube"
+                >
+                  Youtube
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
