Add jamiewilliamsxyz card info

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Jamie</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/jamiewilliamsxyz" target="_blank">jamiewilliamsxyz</a>
+          </p>
+          <p class="about">
+            I am a web developer working towards building some amazing sites and apps.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/emmabostian/developer-portfolios" target="_blank" title="Portfolio Inspiration">Developer Portfolios</a>
+              </li>
+              <li>
+                <a href="https://www.codecademy.com/resources/cheatsheets/subject/web-development" target="_blank" title="Web Development Cheatsheets">Codecademy Web Dev Cheatsheets</a>
+              </li>
+              <li>
+                <a href="https://javascript.info/" target="_blank" title="Modern JavaScript Tutorial">JavaScript.info</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
