added a new card

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+                <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Camila Alazo</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/" target="_blank">No twitter account</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/a-camila" target="_blank">a-camila</a>
+          </p>
+          <p class="about">This is one of my first ever contributions to GitHub.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/docs/Glossary/Block-level_content#Elements" target="_blank" title="Block-level content">Block-level content</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/docs/Glossary/Inline-level_content#Elements" target="_blank" title="Inline-level content">Inline-level content</a>
+              </li>
+              <li>
+                <a href="https://developer.chrome.com/docs/devtools/" target="_blank" title="Chrome DevTools">Chrome DevTools</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
