--- a/index.html
+++ b/index.html
@@ -115,6 +115,36 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+
+
+        <!--    ~ Pragyan's Card START ~    -->
+          <div class="card">
+          <p class="name">Pragyan Sen</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/@sen_pragya89792" target="_blank">Pragyan Sen</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Pragyan2027" target="_blank">Pragyan2027</a>
+          </p>
+          <p class="about"> Hey there! I'm a 🎓 3rd Year Computer Science Student who loves solving problems through code, breaking things just to debug them better, and building optimal solutions </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="GeeksForGeeks">GeeksForGeeks</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="W3Schools">W3Schools</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/" target="_blank" title="Youtube">Youtube</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
