Add my card information

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *Sambit card START ________  -->
+        <div class="card">
+          <p class="name">Sambit</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/sambitmishra04" target="_blank">sambitmishra04</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/sambitmishra04" target="_blank">sambitmishra04</a>
+          </p>
+          <p class="about">A new beginning</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="geeks for geeks">GFG</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org" target="_blank" title="free code camp">Free code camp</a>
+              </li>
+              <li>
+                <a href="https://css-tricks.com/" target="_blank" title="css tricks">css tricks</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
