--- a/index.html
+++ b/index.html
@@ -118,6 +118,33 @@
           <!-- Keep one line of space above and below your card -->
           <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+          <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+          <div class="card">
+            <p class="name">John Martin</p>
+            <p class="contact">
+              <i class="fab fa-linkedin"></i>
+              <a href="https://www.linkedin.com/in/john-carlo-martin-53189536b/" target="_blank">John Carlo Martin</a>
+              <i class="fab fa-github"></i>
+              <a href="https://github.com/JohnMartin0301" target="_blank">JohnMartin0301</a>
+            </p>
+            <p class="about">I’m a passionate developer skilled in building simple and efficient systems. Proficient in Python programming, front-end development, and embedded systems, and I enjoy transforming ideas into working solutions.</p>
+            <div class="resources">
+              <p>3 Useful Dev Resources</p>
+              <ul>
+                <li>
+                  <a href="https://www.freecodecamp.org/" target="_blank" title="First Resource">freecodecamp</a>
+                </li>
+                <li>
+                  <a href="https://www.google.com/" target="_blank" title="Second Resource">Google</a>
+                </li>
+                <li>
+                  <a href="https://www.youtbe.com/" target="_blank" title="Third resource">Youtube</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ ajmecca68 card START ________  -->
                     <div class="card">
                       <p class="name">Alan Mecca</p>
