--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -3153,6 +3153,33 @@
           </div>
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
+
+        <!-- ________ Jawad card START ________  -->
+        <div class="card">
+          <p class="name">Jawad Erfani</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://twitter.com/JawadErfani01" target="_blank">JawadErfani01</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/JawadErfani01" target="_blank">JawadErfani01</a>
+          </p>
+          <p class="about">MERN stack developer creating clean, efficient web solutions since 2022.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="MDN Web Docs">MDN Web Docs</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="Third resource">W3Schools</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="Second Resource">FreeCodeCamp</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Jawad card END ________  -->
 
         <!-- ========= END ========= -->
 
