Add FluffySce card info

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ FluffSce card START ________  -->
+        <div class="card">
+          <p class="name">Farhan Khan</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/Kooky_v0" target="_blank">Kooky_v0</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/FluffySce" target="_blank">FluffySce</a>
+          </p>
+          <p class="about">Hi everyone! I’m Farhan, an aspiring full-stack AI developer and I'm passionate about expanding my knowledge across multiple domains (striving toward becoming a polymath). I truly enjoy the process of learning and love creativity! </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.theodinproject.com/" target="_blank" title="Good place to under beginner web dev & git">The Odin Project</a>
+              </li>
+              <li>
+                <a href="https://fullstackopen.com/en/" target="_blank" title="Dive deep in the realm of web-dev">fullstackopen</a>
+              </li>
+              <li>
+                <a href="https://roadmap.sh/" target="_blank" title="Find roadmaps for your career (learn at your own pace tho!)">RoadmapSH</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
