Update contributor end card comment in index.html

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </ul>
           </div>
         </div>
-        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        <!-- ________ FluffySce card END ________  -->
 
         <!-- ________ unimaria card START ________  -->
         <div class="card">
