Fixed typos in the resource title

--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://www.theodinproject.com/" target="_blank" title="Good place to under beginner web dev & git">The Odin Project</a>
+                <a href="https://www.theodinproject.com/" target="_blank" title="Good place to understand web-dev & git for beginners">The Odin Project</a>
               </li>
               <li>
-                <a href="https://fullstackopen.com/en/" target="_blank" title="Dive deep in the realm of web-dev">fullstackopen</a>
+                <a href="https://fullstackopen.com/en/" target="_blank" title="Dive deep into the realm of web-dev">fullstackopen</a>
               </li>
               <li>
                 <a href="https://roadmap.sh/" target="_blank" title="Find roadmaps for your career (learn at your own pace tho!)">RoadmapSH</a>
