--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ wumarc card START ________  -->
+        <div class="card">
+          <p class="name">marc wu</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">none</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/wumarc" target="_blank">wumarc</a>
+          </p>
+          <p class="about">currently a developer looking to contribute to open-source!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://engineering.fb.com/" target="_blank" title="First Resource">Engineering at Meta</a>
+              </li>
+              <li>
+                <a href="https://incident.io/blog/engineering" target="_blank" title="Second Resource">Incident.io blog</a>
+              </li>
+              <li>
+                <a href="https://github.com/Syknapse/Contribute-To-This-Project/blob/master/README.md" target="_blank" title="Third resource">open-source</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ wumarc card END ________  -->
+
+        
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
