Add KonyD card info

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ KonyD card START ________  -->
+        <div class="card">
+          <p class="name">KonyD</p>
+          <p class="contact">
+            <i class="fab fa-reddit"></i>
+            <a href="https://www.reddit.com/user/KonyDev/" target="_blank">KonyDev</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/KonyD" target="_blank">KonyD</a>
+          </p>
+          <p class="about">A passionate programmer who enjoys creating projects and constantly learning new skills.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/@javascriptmastery" target="_blank">JavaScript Mastery</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank">W3Schools</a>
+              </li>
+              <li>
+                <a href="https://gophercises.com/" target="_blank">Gophercises</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________  KonyD card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
