--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Nilesh Raj</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/ralxi96" target="_blank">ralxi96</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Rajlxi29" target="_blank">ralxigit</a>
+          </p>
+          <p class="about">I am a Computer Science Enthusiast with great interest in the feild of Machine learning and currently want to make some 
+            Open Source Contribution</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://takeuforward.org/strivers-a2z-dsa-course/strivers-a2z-dsa-course-sheet-2" target="_blank" title="First Resource">DSA Sheet</a>
+              </li>
+              <li>
+                <a href="https://github.com/" target="_blank" title="Second Resource">GitHub</a>
+              </li>
+              <li>
+                <a href="https://www.coursera.org/" target="_blank" title="Third resource">Coursera</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
