--- a/index.html
+++ b/index.html
@@ -246,6 +246,32 @@
           </div>
         </div>
         <!-- ________ kelseadecker card END ________  -->
+                 <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Hermann Samimi</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/your_user_handle" target="_blank">hermann-samimi</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/your_user_handle" target="_blank">https://github.com/HermannSamimi</a>
+          </p>
+          <p class="about">Data engineer | ML/AI Engineer</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
         <!-- ________ marshallhhhh Contributor card START ________  -->
         <div class="card">
