--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -3153,6 +3153,42 @@
           </div>
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
+
+        <!-- ________ Priya card START ________  -->
+
+        <div class="card">
+          <p class="name">Priya</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.x.com/priya_vasa16" target="_blank">@priyavasa16</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/priyaavasa" target="_blank">@priyaavasa</a>
+          </p>
+          <p class="about">
+            A software developer, eager to contribute to open-source projects and love arranging 0's and 1's.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://chat.openai.com/chat" target="_blank" title="First Resource">
+                  Best Friend for everything
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/priyaavasa" target="_blank" title="Second Resource">
+                  Keeps you and your work even no one is interested
+                </a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/" target="_blank" title="Third resource">
+                  While you made it to here, then may you get a great job through this platform.
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Priya card END ________  -->
 
         <!-- ========= END ========= -->
 
