added new card with my info

--- a/index.html
+++ b/index.html
@@ -115,6 +115,32 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *S. Tabrez Ahmed card START ________  -->
+        <div class="card">
+          <p class="name">Shams Tabrez Ahmed</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.linkedin.com/in/s-t-ahmed" target="_blank">Check me on Linkedin!</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/seucra" target="_blank">Check me on GitHub</p>
+          <p class="about">A up and coming CyberSecurity Enthusiast.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://education.github.com/pack" target="_blank" title="First Resource">GitHub Student Developer Pack</a>
+              </li>
+              <li>
+                <a href="https://www.jetbrains.com/ides/" target="_blank" title="Second Resource">JETBRAINS IDEs</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="Third resource">Stack Overflow</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
