--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
           <p class="name">Kuheli Bera</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
-            <a href="https://www.twitter.com/KuheliBera2004" target="_blank">Your handle</a>
+            <a href="https://www.twitter.com/KuheliBera2004" target="_blank">KuheliBera2004</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/kuheli31" target="_blank">Your handle</a>
+            <a href="https://www.github.com/kuheli31" target="_blank">kuheli31</a>
           </p>
           <p class="about">Hey! I am Kuheli. Currently pursuing B.Tech . 
             Learning DSA & doing projects and trying to contribute in open-source.</p>
