DMS-Menula's Card

--- a/index.html
+++ b/index.html
@@ -90,25 +90,25 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
-          <p class="name">Your name</p>
+          <p class="name">DMS Menula</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
-            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://www.twitter.com/dmsmenula" target="_blank">@dmsmenula</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://www.github.com/DMS-Menula" target="_blank">DMS-Menula</a>
           </p>
           <p class="about">about you</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+                <a href="https://polypane.app/" target="_blank" title="First Resource">Polypane - Browser for Developers</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+                <a href="https://github.com/fathyb/carbonyl" target="_blank" title="Second Resource">Carbonyl (Terminal-based Browser)</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+                <a href="https://pipedream.com/requestbin" target="_blank" title="Third resource">RequestBin — Test Webhooks Easily</a>
               </li>
             </ul>
           </div>
