add-kaRIOz-card

--- a/index.html
+++ b/index.html
@@ -114,7 +114,32 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
-
+        <!-- ________ kaRIOz card START ________  -->
+        <div class="card">
+          <p class="name">kaRIOz</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="" target="_blank">I don't have socials</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/kaRIOz" target="_blank">kaRIOz</a>
+          </p>
+          <p class="about">Hey! I am passionate about front-end development, creating user-friendly and visually appealing interfaces. My goal is to become a full-stack developer, mastering both front-end and back-end technologies.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.codewars.com/" target="_blank" title="First Resource">Codewars</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com" target="_blank" title="Second Resource">Youtube</a>
+              </li>
+              <li>
+                <a href="https://daily.dev/" target="_blank" title="Third resource">Daily Dev</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ kaRIOz card END ________  -->
         <!-- ________ Borse card START ________  -->
         <div class="card">
           <p class="name">Borse</p>
