--- a/index.html
+++ b/index.html
@@ -114,7 +114,33 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
-
+         
+        <!-- ________ Mohammad Frotan Contributor card start ________  -->
+        <div class="card">
+          <p class="name">Mohamad Frotan</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">@frotan96337</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/your_user_handle" target="_blank">E-M_Frotan</a>
+          </p>
+          <p class="about">Web Developer and Designer</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="_blank" title="First Resource">@frotandevjourney</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Second Resource">Js Mastry</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Third resource">Code With Harry</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Mohammad Frotan Contributor card end ________  -->
         <!-- ________ kuheli31 card start ________  -->
         <div class="card">
           <p class="name">Kuheli Bera</p>
