--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Lethios Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Lethios</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/LethiosDev" target="_blank">LethiosDev</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Lethios" target="_blank">Lethios</a>
+          </p>
+          <p class="about">Aspiring software engineer and data scientist</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="It teaches programming and web development with practice projects.">freeCodeCamp.org</a>
+              </li>
+              <li>
+                <a href="https://roadmap.sh/" target="_blank" title="Step-by-step guides for becoming a developer.">roadmap.sh</a>
+              </li>
+              <li>
+                <a href="https://leetcode.com/" target="_blank" title="Helps you prep for coding interviews with challenges.">LeetCode</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Lethios Contributor card END ________  -->
+
         <!-- ________ Mohammad Frotan Contributor card start ________  -->
         <div class="card">
           <p class="name">Mohamad Frotan</p>
