--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </ul>
           </div>
         </div>
-        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        <!-- ________ Jackson Contributor card END ________  -->
 
         <!-- ________ Vyshaa Contributor card START ________  -->
         <div class="card">
