Add Vaishnavxd contributor card with contact and resources

--- a/index.html
+++ b/index.html
@@ -3430,6 +3430,33 @@
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
 
+        <!-- ________ Vaishnavxd card START ________  -->
+        <div class="card">
+          <p class="name">Vaishnavxd</p>
+          <p class="contact">
+            <i class="fa-brands fa-instagram"></i>
+            <a href="https://www.instagram.com/vaishnavxd" target="_blank">Vaishnavxd</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/vaishnavxd" target="_blank">Vaishnavxd</a>
+          </p>
+          <p class="about">Hi, I am a developer from India. I love to learn new things and like to be good at everything I do.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://chatgpt.com/" target="_blank" title="Chatgpt">Chatgpt</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="Stackoverflow">Stackoverflow</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/" target="_blank" title="Youtube">Youtube</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Vaishnavxd card END ________  -->
+
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
