--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *Dhruv Contributor card start ________  -->
+        <div class="card">
+          <p class="name">Dhruv Agarwal</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/dhruv" target="_blank">dhruv</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/dhruv12082004" target="_blank">dhruv12082004</a>
+          </p>
+          <p class="about">I am Dhruv ,I am a highly motivated aspiring software developer with strong problem solving and critical thinking and a very good knowledge of DSA</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://htmlcheatsheet.com/css/CSS-Cheat-Sheet.pdf target="_blank" title="First Resource">HTML Cheat Sheet</a>
+              </li>
+              <li>
+                <a href="https://ilovecoding.org/blog/htmlcss-cheatsheet" target="_blank" title="Second Resource">iLoveCoding HTML & CSS Cheatsheet</a>
+              </li>
+              <li>
+                <a href="https://www.coursera.org/resources/css-cheat-sheet" target="_blank" title="Third resource">Coursera CSS Cheat Sheet</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________  Contributor card END ________  -->
+
         <!-- ________ Jackson Contributor card START ________  -->
         <div class="card">
           <p class="name">Jackson</p>
