--- a/index.html
+++ b/index.html
@@ -115,6 +115,38 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+         <!-- ________ Janvi Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Janvi</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/heyjaanvii?lang=en" target="_blank">heyjaanvii</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/crookshanksx" target="_blank">crookshanksx</a>
+          </p>
+          <p class="about">Hie I am Janvi and i want to do open source.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.google.com" 
+                target="_blank" 
+                title="First Resource">Resource 1</a>
+              </li>
+              <li>
+                <a href="https://www.hackerrank.com/" 
+                target="_blank" 
+                title="Second Resource">Resource 2</a>
+              </li>
+              <li>
+                <a href="https://www.codecademy.com/" 
+                target="_blank" title="Third resource">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ Jackson Contributor card START ________  -->
         <div class="card">
           <p class="name">Jackson</p>
