--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </ul>
           </div>
         </div>
-        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        <!-- ________ Janvi Contributor card END ________  -->
 
         <!-- ________ Jackson Contributor card START ________  -->
         <div class="card">
