--- a/index.html
+++ b/index.html
@@ -129,18 +129,18 @@
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://www.google.com" 
+                <a href="https://www.linkedin.com/in/j4anvii" 
                 target="_blank" 
-                title="First Resource">Resource 1</a>
+                title="First Resource">LinkedIn Profile</a>
               </li>
               <li>
-                <a href="https://www.hackerrank.com/" 
+                <a href="https://www.geeksforgeeks.org/git/how-to-resolve-error-git-is-not-recognized-on-windows/" 
                 target="_blank" 
-                title="Second Resource">Resource 2</a>
+                title="Second Resource">GeeksforGeeks Article</a>
               </li>
               <li>
-                <a href="https://www.codecademy.com/" 
-                target="_blank" title="Third resource">Resource 3</a>
+                <a href="https://medium.com/@j4anvii" 
+                target="_blank" title="Third resource">Medium Profile</a>
               </li>
             </ul>
           </div>
