--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
-        <!-- ________ *Dhruv Contributor card start ________  -->
+        <!-- ________ Dhruv Contributor card start ________  -->
         <div class="card">
           <p class="name">Dhruv Agarwal</p>
           <p class="contact">
@@ -140,7 +140,7 @@
             </ul>
           </div>
         </div>
-        <!-- ________  Contributor card END ________  -->
+        <!-- ________  Dhruv Contributor card END ________  -->
 
         <!-- ________ Jackson Contributor card START ________  -->
         <div class="card">
