--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://htmlcheatsheet.com/css/CSS-Cheat-Sheet.pdf target="_blank" title="First Resource">HTML Cheat Sheet</a>
+                <a href="https://htmlcheatsheet.com/css/CSS-Cheat-Sheet.pdf" target="_blank" title="First Resource">HTML Cheat Sheet</a>
               </li>
               <li>
                 <a href="https://ilovecoding.org/blog/htmlcss-cheatsheet" target="_blank" title="Second Resource">iLoveCoding HTML & CSS Cheatsheet</a>
