feat: added my contributor card

--- a/index.html
+++ b/index.html
@@ -114,6 +114,33 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+		
+		<!-- ________ Sujith Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Sujith</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/sujith-s-18510a35a?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B4Tmcz7xfRP2WFJY32aXGkg%3D%3D" target="_blank">Sujith S</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/sujith-ox" target="_blank">sujith-ox</a>
+          </p>
+          <p class="about">Hi, I am Sujith and i love contributing to open source</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://programming-23.mooc.fi/" target="_blank" title="Python MOOC">Python Mooc</a>
+              </li>
+              <li>
+                <a href="https://java-programming.mooc.fi/" target="_blank" title="Java MOOC">Java MOOC</a>
+              </li>
+              <li>
+                <a href="https://fullstackopen.com/en/" target="_blank" title="Fullstackopen">Fullstack resource</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Sujith Contributor card END ________  -->
 
         <!-- ________ Vaishnavxd card START ________  -->
         <div class="card">
