--- a/index.html
+++ b/index.html
@@ -122,6 +122,34 @@
 
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+         <!-- ________ *Your_Name* card START ________  -->
+        <div class="card">
+          <p class="name">Rekt</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/Rektama46olan" target="_blank">Rektama46olan</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Rektama46OLAN" target="_blank">Rektama46OLAN</a>
+          </p>
+          <p class="about">I'm a newbie to the software world. Let's get started.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/watch?v=NpYiXVu1KCc" target="_blank" title="The Best Website Development Tools To Try In 2025">Adrian Twarog(Youtube)</a>
+              </li>
+              <li>
+                <a href="https://dev.to/fallon_jimmy/20-best-web-development-tools-software-with-pricing-to-use-in-2025-5gjk" target="_blank" title="20+ Best Web Development Tools & Software (With Pricing)">Fallon Jimmy(Dev.to)</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=lQrcQ3e4mkA" target="_blank" title="2025 Roadmap for web development">Coder Coder(Youtube)</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *Your_Name* card END ________  -->
+
+
         <!-- ________ Meesh card START ________  -->
         <div class="card">
           <p class="name">Carmeshia</p>
