Update contributor cards in index.html

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
-         <!-- ________ *Your_Name* card START ________  -->
+         <!-- ________ Rekt Contributor card START ________  -->
         <div class="card">
           <p class="name">Rekt</p>
           <p class="contact">
@@ -140,9 +140,9 @@
             </ul>
           </div>
         </div>
-        <!-- ________ *Your_Name* card END ________  -->
+        <!-- ________ Rekt Contributor card END ________  -->
 
-        <!-- ________ Meesh card START ________  -->
+        <!-- ________ Sujith Contributor card START ________  -->
         <div class="card">
           <p class="name">Sujith</p>
           <p class="contact">
