--- a/index.html
+++ b/index.html
@@ -1615,6 +1615,33 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+        <!-- ________ Parth's card START ________  -->
+        <div class="card">
+          <p class="name">Parth Kandharkar</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/kandharkarparth" target="_blank">My Twitter</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/parthkandharkar" target="_blank">My Github</a>
+          </p>
+          <p class="about">I’m Parth Kandharkar, a passionate full-stack developer who enjoys contributing to open-source communities and learning through collaboration. My work focuses on creating responsive, efficient web apps using tools like Vue.js, React, Node.js, and MongoDB. I see open source as a great way to share ideas, grow as a developer, and give back to the community.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.w3schools.com/js/" target="_blank" title="Javascript Tutorial">Javascript Tutorial</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/results?search_query=code+step+by+step+react+js" target="_blank" title="React Tutorial">React Tutorial</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=YfO28Ihehbk" target="_blank" title="Python Tutorial">Python Tutorial</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Parth's card END ________  -->
+
         <!-- ________ *TEMPLATE: Warren Smith START ________  -->
         <div class="card">
           <p class="name">Warren Smith</p>
